--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "nim-game-website",
+  "homepage": "https://wail-sr.github.io/nim-game/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,10 +8,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
